# cpp_project_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md
cmake/: Cache.cmake  CompilerWarnings.cmake  PCH.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  TPL.cmake
src/: CMakeLists.txt  main.cpp
